# antares_winjobs

./: .gitignore  README.md  pyproject.toml
config/: config_driver.yaml  config_user.yaml  config_worker.yaml
docs/: TODO.md  antares_winflow.excalidraw  junctions.md  sequence_diagram.md  various.md
docs/architecture/: sequence_diagram.md
docs/brainstorms/: 2021-11_alb_original_concept.pptx
scripts/: clean_data_root.py  clean_driver_data.py  clean_logs_folder.py  loc.py  setup_symlinks_local.py  setup_symlinks_remote.py
src/: main_driver.py  main_user.py  main_worker.py
src-user/: main_user.py
src/driver/: jobs.py  payload_models.py
src/user/: antares.py
src/utils/: antares.py  config.py  ini.py  logger.py  smart_zip.py  symlink.py  time_utils.py
tests/: test_ini.py  test_time_utils.py
